# android-demo-app

HelloWorldApp/: README.md  build.gradle
HelloWorldApp/app/: CMakeLists.txt  build.gradle
HelloWorldApp/app/src/main/cpp/: OnLoad.cpp
HelloWorldApp/app/src/main/java/org/pytorch/helloworld/: MainActivity.java  YOLOv5.java
